<resources>
    <string name="app_name">Stellamaryscoe</string>
    <string name="smce">SMCE</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="sign_up">sign up</string>
    <string name="register_number">Register Number</string>
    <string name="check">check</string>
    <string name="enter_the_otp">Enter the OTP</string>
    <string name="verify">verify</string>
    <string name="already_have_an_account_login">Already have an Account ? Login</string>
</resources>
