<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Steptwo">


    <LinearLayout
        android:background="#fff"
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="130dp"
            android:src="@drawable/smce"
            android:contentDescription="@string/smce" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20sp"
            android:background="@drawable/background"
            android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="25dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#277C2A"
            android:textSize="20sp"
            android:autofillHints="@string/email"
            android:drawableStart="@drawable/ic_mail_outline_black_24dp"
            android:paddingStart="25dp"
            tools:ignore="RtlSymmetry" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20sp"
            android:background="@drawable/background"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawableRight="@drawable/ic_visibility_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="25dp"
            android:paddingTop="10dp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp"
            android:textColorHint="#277C2A"
            android:textSize="20sp"
            android:importantForAutofill="no"
            android:drawableEnd="@drawable/ic_visibility_black_24dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp" />


        <EditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20sp"
            android:background="@drawable/background"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawableRight="@drawable/ic_visibility_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/re_type_password"
            android:inputType="textPassword"
            android:paddingLeft="25dp"
            android:paddingTop="10dp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp"
            android:textColorHint="#277C2A"
            android:textSize="20sp"
            android:importantForAutofill="no"
            android:drawableEnd="@drawable/ic_visibility_black_24dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp" />
        <Button
            android:id="@+id/verify"
            android:textColor="#000"
            android:background="@drawable/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/sign_up"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>

</ScrollView>